package Adapter.Delegated.Package;

public abstract class Print {
  public abstract void printWeak();
  public abstract void printString();
}
